changes on linux

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Sharkah.sln"
+    "dotnet.defaultSolution": "Sharkah-The-Game.sln"
 }
